Fixed styles for Tabbed Widget on mobile.

--- a/wp-content/themes/wp-reddoor/static/styles/src/style.less
+++ b/wp-content/themes/wp-reddoor/static/styles/src/style.less
@@ -452,9 +452,9 @@
       .tabbedWidgetMobile {
 
         .ui-accordion-content{
-          
+
           .tabbedMobileImageArea {
-            min-height: 100px;
+
           }
         }
       }
